# cmsis_dsp.rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
cmsis_dsp_example/: Cargo.toml  memory.x
cmsis_dsp_example/src/: main.rs
cmsis_dsp_sys/: Cargo.toml  bindings.sh  build.rs
cmsis_dsp_sys/c/: cmsis_dsp_combined.h  data_types.c
cmsis_dsp_sys/src/: bindings.rs  lib.rs
cmsis_dsp_sys_pregenerated/: Cargo.toml  bindings.sh  build.rs
cmsis_dsp_sys_pregenerated/src/: lib.rs
examples/: fft.rs
src/: basic.rs  complex.rs  lib.rs  libm_c.rs  micromath_c.rs  transform.rs
