[package]
name = "cmsis_dsp_example"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
build = "build.rs"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.12"
panic-semihosting = "0.5.3"
libm = "0.2.1"

[dependencies.num-complex]
version = "0.3.1"
default-features = false
features = ["libm"]

[dependencies.cmsis_dsp]
path = ".."
features = ["micromath"]
